Responsiveness and Center justification

--- a/html/cards.html
+++ b/html/cards.html
@@ -4,10 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cards</title>
+    <title>Opay</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="/Bootstrap Install/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/Font awesome/fontawesome-free-6.7.2-web/css/all.min.css">
+
+    <!-- Font Awesome files -->
+
+    <link rel="stylesheet" href="/assets/all.min.css">
+    <link rel="stylesheet" href="/assets/webfonts/">
+
 </head>
 
 <body>
@@ -102,9 +107,9 @@
 </body>
 
 
-<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../Font awesome/fontawesome-free-6.7.2-web/js/all.min.js"></script>
+<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/all.min.js"></script>
 </body>
 
 </html>
