--- a/html/index.html
+++ b/html/index.html
@@ -53,15 +53,16 @@
     </header>
 
     <section class="heading">
-        <div class="heading-info">
-            <a href="profile.html" target="_blank"><img src="../img/profile-removebg-preview.png "
-                    alt="Profile picture"></a>
-            <div class="heading-username"><a href="profile.html" target="_blank">Hi,Username</a></div>
-        </div>
-        <div class="heading-links">
-            <a href="customer.html" target="_blank"><i class="fa-solid fa-2x fa-headset"></i></a>
-            <a href=""><i class="fa-solid  fa-2x fa-expand"></i></a>
-            <a href="notification.html" target="_blank"><i class="fa-solid  fa-2x fa-bell"></i></a>
+        <div class="container">
+            <div class="heading-info">
+                <a href="profile.html" target="_blank"><img src="../img/profile-removebg-preview.png " alt="Profile picture"></a>
+                <div class="heading-username"><a href="profile.html" target="_blank">Hi,Username</a></div>
+            </div>
+            <div class="heading-links">
+                <a href="customer.html" target="_blank"><i class="fa-solid fa-2x fa-headset"></i></a>
+                <a href=""><i class="fa-solid  fa-2x fa-expand"></i></a>
+                <a href="notification.html" target="_blank"><i class="fa-solid  fa-2x fa-bell"></i></a>
+            </div>
         </div>
     </section>
 
@@ -129,9 +130,11 @@
         <div>
             <img src="../img/message-removebg-preview.png" alt="Message image with bell">
         </div>
-        <div>
-            <div>Take Control, Stay Informed</div>
-            <div>Add your email, get the latest from OPay</div>
+        <div class="section-3-text">
+            <div>
+                <div>Take Control, Stay Informed</div>
+                <div>Add your email, get the latest from OPay</div>
+            </div>
         </div>
 
     </section>
