Last Transaction html created and minor css edits

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,8 @@
     <section class="heading">
         <div class="container">
             <div class="heading-info">
-                <a href="profile.html" target="_blank"><img src="../img/profile-removebg-preview.png " alt="Profile picture"></a>
+                <a href="profile.html" target="_blank"><img src="../img/profile-removebg-preview.png "
+                        alt="Profile picture"></a>
                 <div class="heading-username"><a href="profile.html" target="_blank">Hi,Username</a></div>
             </div>
             <div class="heading-links">
@@ -86,12 +87,12 @@
                     <p class="hero-amount-balance">0.00</p>
                     <div class="hero-amount-icon"><a href=""><i class="fa-solid fa-angle-right"></i></a></div>
                 </div>
-                
+
             </div>
             <div>
                 <div class="hero-money-add">
                     <a href="">+ <span>Add Money</span></a>
-                    
+
                 </div>
             </div>
         </div>
@@ -100,15 +101,20 @@
     </section>
 
     <section class="section-1 container-fluid">
-        <div><i class="fa-solid fa-percent"></i></div>
-        <div>
-            <div>Last Transaction</div>
-            <div>Date of Last Transaction</div>
+        <div class="transfer-detail">
+            <div class="arrow-up"><i class="fa-solid fa-arrow-up"></i></div>
+            <div class="transfer-person">
+                <div>Lorem ipsum dolor sit amet. </div>
+                <div>Dec 10th, 22:29:08</div>
+            </div>
+            <div>
+            </div>
         </div>
         <div>
-            <div>Debit/Credit Amount</div>
-            <div>State</div>
+            <div>- &#8358 2100.00</div>
+            <div>Successful</div>
         </div>
+
     </section>
 
     <section class="section-2 container-fluid">
