Home page Html and Css Completion and Reward page css start

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opay</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/Bootstrap Install/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <!-- Font Awesome files -->
 
@@ -104,7 +104,7 @@
         <div class="transfer-detail">
             <div class="arrow-up"><i class="fa-solid fa-arrow-up"></i></div>
             <div class="transfer-person">
-                <div>Lorem ipsum dolor sit amet. </div>
+                <div>Transfer to MR LOREM IPSUM DOLAR </div>
                 <div>Dec 10th, 22:29:08</div>
             </div>
             <div>
@@ -183,7 +183,10 @@
     <section class="section-5">
         <div class="section-5-gift">
             <div>Special Bonus For Your</div>
-            <img src="../img/gift.png" alt="Gift image">
+            <div class="section-5-gift-link">
+                <img src="../img/gift.png" alt="Gift image">
+                <div><a href=""><i class="fa-solid fa-angle-right"> </i></a></div>
+            </div>
         </div>
 
         <div class="section-5-bonus">
@@ -191,15 +194,15 @@
                 <i class="fa-solid fa-signal"></i>
                 <div class="section-5-bonus-align">
                     <div>Airtime & Data Voucher</div>
-                    <div>Get &#8358 100 airtime& &#8358 100 data for free</div>
+                    <div>Get &#8358 100 airtime & &#8358 100 data for free</div>
                 </div>
             </div>
-            <div>Go</div>
+            <div><button>Go</button></div>
         </div>
     </section>
 
     <section class="section-6 text-success">
-        <div><i class="fa-solid fa-bullhorn "></i></div>
+        <div><i class="fa-solid fa-bullhorn"></i></div>
         <div>
             <p>Cash up for grabs</p>
             <p>Invite friends and earn up to &#8358 5,600 Bonus</p>
@@ -207,7 +210,7 @@
     </section>
 
 
-    <script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/all.min.js"></script>
 
 </body>
