--- a/html/rewards.html
+++ b/html/rewards.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opay</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/Bootstrap Install/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <!-- Font Awesome files -->
-
     <link rel="stylesheet" href="/assets/all.min.css">
     <link rel="stylesheet" href="/assets/webfonts/">
 
@@ -48,13 +47,35 @@
                     <p>Me</p>
                 </a>
             </div>
-    
+
         </div>
     </header>
     <header class="section-1-rw">
         <div>
-            <div>Rewards</div>
+
             <!-- <div>Menu Button</div> -->
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <div class="container-fluid d-flex justify-content-space-between">
+                    <a class="navbar-brand justify-self-center" href="#">Rewards</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav d-flex justify-content-center align-items-center">
+                            <a class="nav-link active d-flex gap-3 align-items-center" aria-current="page" href="#">
+                                <i class="fa-solid fa-book"></i>
+                                <span>Rules</span>
+                            </a>
+                            <a class="nav-link d-flex gap-3 align-items-center" href="#">
+                                <i class="fa-solid fa-clock"></i>
+                               <span>History</span> 
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
         <div>
             <p>Cashback</p>
@@ -131,7 +152,7 @@
             </div>
         </div>
 
-        <a href="">View ALl <!-- Dropdown Icon--></a>
+        <a href="">View ALL <!-- Dropdown Icon--></a>
     </section>
 
     <section>
@@ -264,8 +285,8 @@
 </body>
 
 
-<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/all.min.js"></script>
 </body>
 
