Update rewards section styles and HTML structure
Increased font sizes and adjusted spacing in the rewards section for better readability. Modified the HTML structure by moving the link out of the span in rewards.html to simplify markup and align with updated CSS targeting.

--- a/html/rewards.html
+++ b/html/rewards.html
@@ -99,8 +99,8 @@
                 <img src="/img/silver-naira.png" alt="Naira-book">
                 <p class="naira-text">
                     <span class="text">3</span>
-                    <span class="none"><a href=""><i class="fa-solid fa-angle-right"></i></a>
-                    </span>
+                    <a href=""><i class="fa-solid fa-angle-right"></i></a>
+                    
                 </p>
             </div>
         </div>
