Revamp rewards, finance, cards, and profile UI
Updated CSS and HTML for cards, finance, rewards, and profile pages to improve layout, styling, and component structure. Enhanced bonus sections, unified button and icon styles, modernized profile and balance displays, and switched Bootstrap/CDN paths for consistency.

--- a/html/cards.html
+++ b/html/cards.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opay</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/Bootstrap Install/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/partials/bootstrap.min.css">
 
     <!-- Font Awesome files -->
 
@@ -108,7 +108,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/all.min.js"></script>
 </body>
 
