--- a/html/finance.html
+++ b/html/finance.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opay</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="/Bootstrap Install/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/partials/bootstrap.min.css">
 
     <!-- Font Awesome files -->
 
@@ -53,13 +53,13 @@
     </header>
 
     <header class="section-1-fn">
-        <div>
-            <div>Finance</div>
-            <p>from BlueRidge Microfinance bank</p>
+        <div class="d-flex align-items-center gap-3 finance">
+            <h2>Finance</h2>
+            <span>from BlueRidge Microfinance bank</span>
         </div>
         <div>
-            <div>Savings</div>
-            <div>Loan</div>
+            <div><a href="" style="color: white;">Savings</a></div>
+            <div><a href="" style="color: white;">Loan</a></div>
             <div><a href=""><!--Gear Icon--></a></div>
         </div>
         <div>
@@ -132,7 +132,7 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../Bootstrap Install/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/all.min.js"></script>
 </body>
 
