Revamp UI and add assets for Opay web app
Updated HTML and CSS for improved navigation, consistent currency formatting, and enhanced visual elements across all pages. Added new image assets for badges, profile, shield, CBN logo, and economy icon. Refactored navigation bars to use active link highlighting and icons, and implemented corresponding JavaScript for tab switching. Replaced placeholder icons and images with actual assets and standardized currency symbol to ₦ throughout the app.

--- a/html/finance.html
+++ b/html/finance.html
@@ -48,7 +48,7 @@
                     <p>Me</p>
                 </a>
             </div>
-    
+
         </div>
     </header>
 
@@ -58,36 +58,43 @@
             <span>from BlueRidge Microfinance bank</span>
         </div>
         <div>
-            <div><a href="" style="color: white;">Savings</a></div>
-            <div><a href="" style="color: white;">Loan</a></div>
-            <div><a href=""><!--Gear Icon--></a></div>
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active-link" href="#">Savings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Loan</a>
+                </li>
+            </ul>
+
+            <div><a href=""><i class="fa-solid fa-gear"></i></a></div>
         </div>
         <div>
-            <div>Total Balance <a href="">Eye Icon</a></div>
-            <div>&#8358 0.00</div>
+            <div>Total Balance <a href=""><i class="fa-solid fa-eye"></i></a></div>
+            <div class="interest-text">Total Interest</div>
         </div>
         <div>
 
-            <div>Total interest</div>
-            <div>&#8358 0.00</div>
+            <div>₦0.00</div>
+            <div>₦0.00</div>
         </div>
 
     </header>
     <section class="section-2-fn">
         <div>
-            <!-- Naira Hand Icon  -->
+            <a href=""><i class="fa-solid fa-hand-holding-dollar"></i></a>
             <h2>OWealth</h2>
         </div>
 
         <div>Your daily returns. You can withdraw at any time.</div>
 
-        <div>&#8358 0.00</div>
+        <div>₦0.00</div>
     </section>
 
     <section class="section-3-fn">
         <div>
             <div>
-                <!-- Target Bullseye Icon -->
+                <a href=""><i class="fa-solid fa-bullseye"></i></a>
                 <div>Targets</div>
             </div>
 
@@ -95,7 +102,7 @@
         </div>
         <div>
             <div>
-                <!-- SafeBox Icon -->
+                <a href=""><i class="fa-solid fa-vault"></i></a>
                 <div>SafeBox</div>
             </div>
             <div>Your daily, weekly or monthly automatic savings.</div>
@@ -103,27 +110,27 @@
 
         <div>
             <div>
-                <!-- Naira Locked Icon -->
+                <a href=""><i class="fa-solid fa-lock"></i></a>
                 <div>Fixed</div>
             </div>
             <div>
-                <p>Min:&#8358 1000 </p>
+                <p>Min:₦1000 </p>
                 <p>Tenor: 7-1000 days</p>
             </div>
         </div>
 
         <div>
             <div>
-                <!-- Naira Bag Icon -->
-                 <div>Spend & Save</div>
+                <a href=""><i class="fa-solid fa-sack-dollar"></i></a>
+                <div>Spend & Save</div>
             </div>
             <div>Your percentage savings every time you spend or transfer.</div>
         </div>
 
         <div>
             <div>
-                <!-- High Finances Icon  -->
-                 <div>Savings Report</div>
+                <img src="/img/economy.png" alt="">
+                <div>Savings Report</div>
             </div>
 
             <div>Check out your savings journey so far</div>
@@ -134,6 +141,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/all.min.js"></script>
+<script src="/js/script.js"></script>
 </body>
 
 </html>
