--- a/html/index.html
+++ b/html/index.html
@@ -70,9 +70,9 @@
     <section class="hero container-fluid">
         <div class="hero-balance-history">
             <div class="hero-balance">
-                <div><i class="fa-2x fa-solid fa-shield"></i></div>
+                <div class="heading-links"><i class="fa-2x fa-solid fa-shield"></i></div>
                 <div class="hero-balance-text">Available Balance</div>
-                <div><i class="fa-2x fa-solid fa-eye"></i></div>
+                <di class="heading-links"><i class="fa-2x fa-solid fa-eye"></i></div>
             </div>
             <div class="hero-history">
                 <div></div><a href="">Transaction History</a>
@@ -83,8 +83,7 @@
             <div class="hero-money-mini">
 
                 <div class="hero-amount ">
-                    <p>&#8358</p>
-                    <p class="hero-amount-balance">0.00</p>
+                    <p class="hero-amount-balance">₦0.00</p>
                     <div class="hero-amount-icon"><a href=""><i class="fa-solid fa-angle-right"></i></a></div>
                 </div>
 
@@ -101,17 +100,14 @@
     </section>
 
     <section class="section-1 container-fluid">
-        <div class="transfer-detail">
             <div class="arrow-up"><i class="fa-solid fa-arrow-up"></i></div>
             <div class="transfer-person">
                 <div>Transfer to MR LOREM IPSUM DOLAR </div>
                 <div>Dec 10th, 22:29:08</div>
             </div>
-            <div>
-            </div>
-        </div>
+
         <div>
-            <div>- &#8358 2100.00</div>
+            <div>- ₦2100.00</div>
             <div>Successful</div>
         </div>
 
@@ -194,7 +190,7 @@
                 <i class="fa-solid fa-signal"></i>
                 <div class="section-5-bonus-align">
                     <div>Airtime & Data Voucher</div>
-                    <div>Get &#8358 100 airtime & &#8358 100 data for free</div>
+                    <div>Get ₦100 airtime & ₦100 data for free</div>
                 </div>
             </div>
             <div><button>Go</button></div>
@@ -205,7 +201,7 @@
         <div><i class="fa-solid fa-bullhorn"></i></div>
         <div>
             <p>Cash up for grabs</p>
-            <p>Invite friends and earn up to &#8358 5,600 Bonus</p>
+            <p>Invite friends and earn up to ₦5,600 Bonus</p>
         </div>
     </section>
 
