--- a/html/rewards.html
+++ b/html/rewards.html
@@ -82,14 +82,14 @@
                 <span>Cashback</span>
                 <span><i class="fa-solid fa-question"></i></span>
             </p>
-            <p class="voucher-220">Voucher &#8358 220</p>
+            <p class="voucher-220">Voucher ₦220</p>
         </div>
 
         <div class="golden">
             <div class="golden-naira d-flex flex-row align-items-center">
                 <img src="/img/golden-naira.png" alt="golden-naira">
                 <span class="text text-dark d-flex">
-                    <span>&#8358</span>
+                    <span>₦</span>
                     <span>3.00</span>
                 </span>
                 <a href=""><i class="fa-solid fa-angle-right"></i></a>
@@ -134,7 +134,7 @@
     </section>
 
     <!-- <section class="section-2-rw">
-        <div>Welcome back offer <div>Total &#8358 350 Bonus</div>
+        <div>Welcome back offer <div>Total ₦350 Bonus</div>
         </div>
 
         <div class="section-2-rw-money">
@@ -145,7 +145,7 @@
                     <div class="welcome-text">
                         <p>Add money <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +50</p>
                         <p><span>Fund your OPay account with</span> <span class="d-flex flex-row">
-                                <p>&#8358</p>
+                                <p>₦</p>
                                 <p>2000</p>
                             </span> or more</p>
                     </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="welcome-text">
                         <p>Data payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</p>
-                        <p>Data purchase above <span class="d-flex"><span>&#8358</span> <span>400</span></span>
+                        <p>Data purchase above <span class="d-flex"><span>₦</span> <span>400</span></span>
                             (registered number only)</p>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                 <div class="bonus-text">
                     <div>Betting payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100
                     </div>
-                    <div>Fund betting account with <span class="d-flex"><span>&#8358</span> <span>600</span></span> or
+                    <div>Fund betting account with <span class="d-flex"><span>₦</span> <span>600</span></span> or
                         more</div>
                 </div>
 
@@ -191,7 +191,7 @@
 
     </section> -->
     <section class="section-2-rw">
-        <div class="bonus-title">Welcome back offer Total &#8358 350 Bonus</div>
+        <div class="bonus-title">Welcome back offer Total ₦350 Bonus</div>
 
         <div class="bonus-item">
             <div class="bonus-icon">
@@ -200,7 +200,7 @@
             <div class="bonus-text">
                 <div>Add money <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +50</div>
                 <div>Fund your OPay account with
-                    &#8358 2000 or more
+                    ₦2000 or more
                 </div>
             </div>
             <div>
@@ -214,7 +214,7 @@
             </div>
             <div class="bonus-text">
                 <div>Data payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</div>
-                <div>Data purchase above <span class="d-flex"><span>&#8358</span> <span>400</span></span>
+                <div>Data purchase above <span class="d-flex">₦400
                 (registered number only)</div>
             </div>
             <div>
@@ -228,7 +228,7 @@
             </div>
             <div class="bonus-text">
                 <div>Betting payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</div>
-                <div>Fund betting account with <span class="d-flex"><span>&#8358</span> <span>600</span></span> or
+                <div>Fund betting account with <span class="d-flex">₦600 or
                 more</div>
             </div>
             <div>
@@ -265,9 +265,9 @@
 
         <div class="voucher-sect d-flex flex-column gap-4 justify-content-center align-items-center">
             <div class="voucher">
-                <p class="voucher-amount">&#8358;20</p>
+                <p class="voucher-amount">₦20</p>
                 <p class="voucher-title">Betting Voucher</p>
-                <p class="voucher-available">&#8358;300 available</p>
+                <p class="voucher-available">₦300 available</p>
                 <button class="voucher-btn">Use</button>
             </div>
 
@@ -308,10 +308,10 @@
                 <img src="/img/mtn-logo.jpg" alt="Mtn Logo" class="offer-logo">
             </div>
             <div class="offer-details">
-                <p class="offer-text">Buy &#8358;100 Airtime, pay &#8358;1</p>
+                <p class="offer-text">Buy ₦100 Airtime, pay ₦1</p>
                 <div class="progress">10000</div>
-                <p class="new-price">&#8358;1</p>
-                <p class="old-price"><del>&#8358;100</del></p>
+                <p class="new-price">₦1</p>
+                <p class="old-price"><del>₦100</del></p>
             </div>
             <div class="offer-action">
                 <button class="remind-btn">Remind</button>
@@ -329,7 +329,7 @@
             </div>
             <div class="bonus-text">
                 <div>Upgrade to Tier2 <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +50</div>
-                <div>Upgrade to Tier2 to earn &#8358 50 and get higher transaction limit</div>
+                <div>Upgrade to Tier2 to earn ₦50 and get higher transaction limit</div>
             </div>
             <div>
                 <button class="bonus-btn">Go</button>
@@ -374,7 +374,7 @@
     <section class="section-5-rw">
         <a href="" class="text-decoration-none d-flex justify-content-evenly w-100">
             <div class="discount-info">
-                <p>Claim 8 Discounts with &#8358 29 on any bill</p>
+                <p>Claim 8 Discounts with ₦29 on any bill</p>
                 <button class="discount-btn">Claim 8 Discounts</button>
             </div>
             <div class="discount-img">
