Last major responsive changes

--- a/html/cards.html
+++ b/html/cards.html
@@ -63,8 +63,12 @@
         <div>
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active-link" href="#virtual">Virtual Card</a>
+                    <a class="nav-link active-link" href="#virtual">
+                        Virtual Card
+                        <span class="discount-badge">25% OFF</span>
+                    </a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#physical">Physical Card</a>
                 </li>
