--- a/html/rewards.html
+++ b/html/rewards.html
@@ -86,20 +86,15 @@
         </div>
 
         <div class="golden">
-            <div class="golden-naira d-flex flex-row align-items-center">
+            <div class="golden-naira d-flex">
                 <img src="/img/golden-naira.png" alt="golden-naira">
-                <span class="text text-dark d-flex">
-                    <span>₦</span>
-                    <span>3.00</span>
-                </span>
-                <a href=""><i class="fa-solid fa-angle-right"></i></a>
+
+                <a href="" style="align-self: center;">₦3.00 ></i></a>
             </div>
 
-            <div class="naira-book">
+            <div class="naira-book d-flex align-items-center    ">
                 <img src="/img/silver-naira.png" alt="Naira-book">
-                <p class="naira-text">
-                    <span class="text">3</span>
-                    <a href=""><i class="fa-solid fa-angle-right"></i></a>
+                <p class="naira-text"><a href="">3 ></a>
 
                 </p>
             </div>
@@ -107,91 +102,38 @@
     </header>
 
     <section class="section-1-rw-nav">
-        <div class="card bg-dark">
-            <div class="container">
-                <div><img src="/img/200-voucher.png" alt="200-voucher" class="card-img"></div>
-                <div class="card-title">Friday Bonus</div>
+        <div class="container card-contain">
+            <div class="card">
+                <div>
+                    <div><img src="/img/200-voucher.png" alt="200-voucher" class="card-img"></div>
+                    <div class="card-title">Friday Bonus</div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="refer-img"><img src="/img/friendship.png" alt="Smily emoji" class="card-img"></div>
+                    <div class="card-title">Refer Friends</div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div><img src="/img/spin-now.png" alt="Spin Now" class="card-img"></div>
+                    <div class="card-title">Spin & Win</div>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div><img src="/img/star.png" alt="Sun emoji" class="card-img"></div>
+                    <div class="card-title">Play4aChild</div>
+                </div>
             </div>
         </div>
-        <div class="card bg-dark">
-            <div class="container">
-                <div class="refer-img"><img src="/img/friendship.png" alt="Smily emoji" class="card-img"></div>
-                <div class="card-title">Refer Friends</div>
-            </div>
-        </div>
-        <div class="card bg-dark">
-            <div class="container">
-                <div><img src="/img/spin-now.png" alt="Spin Now" class="card-img"></div>
-                <div class="card-title">Spin & Win</div>
-            </div>
-        </div>
-        <div class="card bg-dark">
-            <div class="container">
-                <div><img src="/img/star.png" alt="Sun emoji" class="card-img"></div>
-                <div class="card-title">Play4aChild</div>
-            </div>
-        </div>
+        <div class="bonus-title">Welcome back offer Total ₦350 Bonus</div>
+
     </section>
 
-    <!-- <section class="section-2-rw">
-        <div>Welcome back offer <div>Total ₦350 Bonus</div>
-        </div>
 
-        <div class="section-2-rw-money">
-            <div class="bonus-item">
-                <div class="d-flex flex-row w-50 justify-content-between">
-                    <div class="icon-bg"><i class="fa-solid fa-3x fa-sack-dollar icon"></i>
-                    </div>
-                    <div class="welcome-text">
-                        <p>Add money <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +50</p>
-                        <p><span>Fund your OPay account with</span> <span class="d-flex flex-row">
-                                <p>₦</p>
-                                <p>2000</p>
-                            </span> or more</p>
-                    </div>
-
-                </div>
-
-                <div><button>Go</button></div>
-            </div>
-            <div class="bonus-item">
-                <div class="d-flex flex-row w-50 justify-content-between">
-                    <div class="icon-bg"><i class="fa-solid fa-3x fa-signal icon"></i>
-                    </div>
-                    <div class="welcome-text">
-                        <p>Data payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</p>
-                        <p>Data purchase above <span class="d-flex"><span>₦</span> <span>400</span></span>
-                            (registered number only)</p>
-                    </div>
-                </div>
-
-                <div><button>Go</button></div>
-            </div>
-            <div class="bonus-item">
-
-                <div class="bonus-icon">
-                    <i class="icon fa-3x fa-solid fa-dice"></i>
-                </div>
-                <div class="bonus-text">
-                    <div>Betting payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100
-                    </div>
-                    <div>Fund betting account with <span class="d-flex"><span>₦</span> <span>600</span></span> or
-                        more</div>
-                </div>
-
-                <div>
-                    <button class="bonus-btn">Go</button>
-                </div>
-            </div>
-            <div class="d-flex justify-content-center">
-                <a href="" class="nav-link text-light">View All <i class="fa-solid fa-angle-down"></i></a>
-
-            </div>
-        </div>
-
-    </section> -->
     <section class="section-2-rw">
-        <div class="bonus-title">Welcome back offer Total ₦350 Bonus</div>
 
         <div class="bonus-item">
             <div class="bonus-icon">
@@ -215,7 +157,7 @@
             <div class="bonus-text">
                 <div>Data payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</div>
                 <div>Data purchase above <span class="d-flex">₦400
-                (registered number only)</div>
+                        (registered number only)</div>
             </div>
             <div>
                 <button class="bonus-btn">Go</button>
@@ -229,7 +171,7 @@
             <div class="bonus-text">
                 <div>Betting payment <img src="/img/golden-naira.png" class="golden-img" alt="golden-naira"> +100</div>
                 <div>Fund betting account with <span class="d-flex">₦600 or
-                more</div>
+                        more</div>
             </div>
             <div>
                 <button class="bonus-btn">Go</button>
@@ -245,10 +187,10 @@
     </section>
 
     <section class="rw-voucher">
-        <div class="rw-first">Hot Vouchers
-            <span>
-                <img src="/img/silver-naira.png"></img>
-            </span>
+        <div class="rw-first">
+            Hot Vouchers
+
+            <img src="/img/silver-naira.png"></img>
         </div>
 
         <div>
