Update navigation links to use absolute paths
Changed navigation links in index.html to use absolute paths (e.g., /html/rewards.html) instead of relative paths. Also made a minor change to the script tag for all.min.js by adding a space at the end of the src attribute.

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
                 </a>
             </div>
             <div class="home-nav">
-                <a href="rewards.html">
+                <a href="/html/rewards.html">
                     <i class="fa-solid fa-gem"></i>
                     <p>Rewards</p>
                 </a>
             </div>
             <div class="home-nav">
-                <a href="finance.html">
+                <a href="/html/finance.html">
                     <i class="fa-solid fa-square-poll-vertical"></i>
                     <p>Finance</p>
                 </a>
             </div>
             <div class="home-nav">
-                <a href="cards.html">
+                <a href="/html/cards.html">
                     <i class="fa-solid fa-credit-card"></i>
                     <p>Cards</p>
                 </a>
             </div>
             <div class="home-nav">
-                <a href="me.html">
+                <a href="/html/me.html">
                     <i class="fa-solid fa-id-badge"></i>
                     <p>Me</p>
                 </a>
@@ -221,7 +221,7 @@
 
 
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/all.min.js"></script>
+    <script src="/assets/all.min.js "></script>
 
 </body>
 
