Update Home link to use absolute path in nav
Changed the Home navigation link in cards.html, finance.html, me.html, and rewards.html to use an absolute path (/index.html) instead of a relative path (index.html) for improved routing consistency.

--- a/html/rewards.html
+++ b/html/rewards.html
@@ -18,7 +18,7 @@
     <header>
         <div class="nav-sect">
             <div class="home-nav">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="../img/opay_icon.png" alt="Opay icon">
                     <p>Home</p>
                 </a>
