Make floating modal draggable and improve styling
Implemented drag-and-drop functionality for the floating modal by updating the JavaScript and adjusting the modal's HTML structure. Enhanced modal styling in CSS for better user experience, including cursor changes and positioning. Also made minor HTML formatting improvements.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="heading-links">
                 <a href="customer.html" target="_blank" class="headset">
                     <div><i class="fa-solid fa-2x fa-headset"></i>
-</div>
+                    </div>
                     <span class="help">HELP</span>
                 </a>
                 <a href=""><i class="fa-solid fa-2x fa-expand"></i></a>
@@ -104,11 +104,11 @@
     </section>
 
     <section class="section-1 container-fluid">
-            <div class="arrow-up"><i class="fa-solid fa-arrow-up"></i></div>
-            <div class="transfer-person">
-                <div>Transfer to MR LOREM IPSUM DOLAR </div>
-                <div>Dec 10th, 22:29:08</div>
-            </div>
+        <div class="arrow-up"><i class="fa-solid fa-arrow-up"></i></div>
+        <div class="transfer-person">
+            <div>Transfer to MR LOREM IPSUM DOLAR </div>
+            <div>Dec 10th, 22:29:08</div>
+        </div>
 
         <div>
             <div>- ₦2100.00</div>
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <div><button>Go</button></div>
-            
+
         </div>
     </section>
 
@@ -213,12 +213,16 @@
             </div>
         </div>
     </section>
-    <div class="floating-modal">
-        <img src="/img/shield.png" alt="Security" class="floating-icon" >
+    <div class="floating-modal" id="floatingModal">
+        <div class="floating-icon">
+            <img src="/img/shield.png" alt="Security" width="30" height="30" draggable="false" />
+        </div>
         <div class="floating-text">Click for Security</div>
     </div>
 
 
+
+    <script src="js/script.js"></script>
 
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/all.min.js "></script>
